<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 聊天 -->
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="pressAgainExitApp">再按一次退出应用</string>
    <string name="composer_text_hint">你好...</string>
    <string name="emoji_recent_intro">最近使用的表情符号将显示在此处</string>
    <string name="pref_default_sms_mms_client_key">pref_default_sms_mms_client</string>
    <string name="pref_sound_chat_key">pref_sound_chat</string>
    <string name="pref_sound_notification_key">pref_sound_notification</string>
    <string name="pref_vibrate_key">pref_vibrate</string>
    <string name="pref_nightmode_key">nightmode</string>
    <string name="pref_facebook_sync_key">facebook_sync</string>
    <string name="pref_privacy_policy_key">pref_privacy_policy</string>
    <string name="pref_emoji_recent_key">pref_emoji_recent</string>
    <string name="pref_eligibility_cache_key">pref_eligibility_cache</string>
    <string name="pref_install_id_key">pref_hello_id</string>
    <string name="pref_invite_reminders_key">invite_reminders</string>
    <string name="pref_minimum_version_key">minimum_version</string>
    <string name="pref_update_message_key">update_message</string>
    <string name="pref_conflicting_apps">conflicting_apps</string>
    <string name="pref_display_notification_key">wake_up_screen</string>
    <string name="pref_popover_notification_key">popover_notification</string>
    <string name="pref_media_sms_send_key">media_sms_send</string>
    <string name="pref_tapcam_key">tapcam</string>
    <string name="pref_ott_key">ott</string>
    <string name="pref_read_receipts_key">read_receipts</string>
    <string name="compose_error_no_addresses">首先挑选某人来聊天！</string>
    <string name="ott_dialog_positive_button">开启</string>
    <string name="ott_dialog_negative_button">稍后</string>
    <string name="recipients_placeholder">To…</string>
    <string name="titleRecommend">附近推荐</string>
    <string name="tabRecommend">推荐</string>
    <string name="tabMessage">消息</string>
    <string name="tabConnect">联系人</string>
    <string name="tabMine">我的</string>
    <!--我的-->
    <string name="friends">好友</string>
    <string name="calls">通话</string>
    <string name="messages">消息</string>
    <string name="tasks">任务</string>
    <string name="item_one_up">接听设置</string>
    <string name="item_one_down">只允许好友呼叫</string>
    <string name="item_one_right">修改</string>
    <string name="item_two">我的相册</string>
    <string name="item_three">修改资料</string>
    <string name="item_four">我的鲜花</string>
    <string name="item_five">我的钱包</string>
    <string name="item_five_right">30金币</string>
    <string name="item_six">语玩商城</string>
    <string name="item_six_right">0豆子</string>
</resources>